# CGTeamProject

./: .gitignore  CMakeLists.txt  Log.md  README.md
assets/: CuberpunkCityWithKaws.glb
include/: Framebuffer.h  PostProcessor.h
include/glad/: glad.h
shaders/: extract_bright.fs  glitch.fs  model.fs  model.vs  screen.fs  textured.fs
src/: Camera.h  Framebuffer.cpp  GameManager.cpp  GameManager.h  Model.h  PostProcessor.cpp  Shader.h  glad.c  main.cpp
